# pydantic-ai-mcp-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/0_subprocess/: client.py  server.py
examples/1_http_mcp_run/: client.py  server.py
examples/2_http_fastapi/: client.py  server.py
examples/3_http_starlette/: client.py  server.py
examples/subprocess/: client.py  server.py
src/pydantic_ai_mcp_experiment/: __init__.py  agents.py  data.py  servers.py
tests/: test_agents.py  test_data.py
tests/examples/: test_subprocess.py
